hphp/hack/test/typecheck/function_pointer/class_const_dollar_dollar.php.exp
File "class_const_dollar_dollar.php", line 9, characters 22-28:
Function pointers must be explicitly specified (Parsing[1002])
